Get countries view working

--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="cncApp">
 <head>
   <meta charset="UTF-8">
   <title>Countries and Capitals</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="cnc.css">
 
 </head>
 <body>
-  <nav class="nav navbar-default">
-    <div class="container">
-        <a href="#" class="navbar-brand">Countries and Capitals</a>
+  <nav class="navbar navbar-default">
+    <div class="navbar-header">
+      <a href="#/" class="navbar-brand site-title">Countries and Capitals</a>
     </div>
   </nav>
-  
+  <div class="container">
+
+    <div ng-view></div>
+
+  </div>
+  <script type="text/javascript" src="./bower_components/angular/angular.js"></script>
+  <script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
+  <script type="text/javascript" src="./bower_components/angular-animate/angular-animate.js"></script>
+  <script type="text/javascript" src="cnc-app.js"></script>
+  <script type="text/javascript" src="./home/home.js"></script>
+  <script type="text/javascript" src="./countries/countries.js"></script>
+
 </body>
 </html>
