Continue to work on country capital page

--- a/app/countries/country.html
+++ b/app/countries/country.html
@@ -1,1 +1,5 @@
-<h1>Test</h1>
+<a href="#/countries">Back to Countries</a>
+<h1>{{country}}</h1>
+<p>
+  This is the country page for {{country}}.
+</p>
