Get country page working with its own controller

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
   <script type="text/javascript" src="cnc-app.js"></script>
   <script type="text/javascript" src="./home/home.js"></script>
   <script type="text/javascript" src="./countries/countries.js"></script>
+  <script type="text/javascript" src="./country/country.js"></script>
 
 </body>
 </html>
