--- a/app/countries/countries.html
+++ b/app/countries/countries.html
@@ -19,7 +19,7 @@
       <td>{{country.areaInSqKm | number}}</td>
       <td>{{country.population | number}}</td>
       <td>{{country.continent}}</td>
-      <td><a ng-href="#/countries/{{country.countryName.toLowerCase();}}/capital" class="btn btn-default">View</a>
+      <td><a ng-href="#/countries/{{country.countryCode}}/capital" class="btn btn-default">View</a>
     </tr>
   </tbody>
 </table>
