--- a/app/countries/country.html
+++ b/app/countries/country.html
@@ -1,5 +1,6 @@
 <a href="#/countries">Back to Countries</a>
 <h1>{{country}}</h1>
 <p>
-  This is the country page for {{country}}.
+  This is the country page test for {{country}}.
+  {{countryObject.continent}}
 </p>
