Fix bug: link to neighbours was not relative

--- a/app/country/country.html
+++ b/app/country/country.html
@@ -21,7 +21,7 @@
     <tr>
       <td>Neighbors</td>
       <td>
-        <a ng-repeat="neighbour in country.neighbours" ng-href="http://localhost:8080/#/countries/{{neighbour.countryCode}}/capital">{{neighbour.countryName}}<br></a>
+        <a ng-repeat="neighbour in country.neighbours" ng-href="/#/countries/{{neighbour.countryCode}}/capital">{{neighbour.countryName}}<br></a>
       </td>
     </tr>
     <tr>
