--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Countries and Capitals</title>
+  <!-- build:css ./_assets/combined.css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="cnc.css">
+  <!-- endbuild  -->
 
 </head>
 <body ng-class="{loading: isLoading}">
@@ -21,6 +23,7 @@
     </div>
 
   </div>
+  <!-- build:js ./_assets/combined.js -->
   <script type="text/javascript" src="./bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
   <script type="text/javascript" src="./bower_components/angular-animate/angular-animate.js"></script>
@@ -28,6 +31,7 @@
   <script type="text/javascript" src="./home/home.js"></script>
   <script type="text/javascript" src="./countries/countries.js"></script>
   <script type="text/javascript" src="./country/country.js"></script>
+  <!-- endbuild  -->
 
 </body>
 </html>
